<resources>
    <string name="app_name">PokemonStore</string>
    <string name="pokemon_inventory">Pokemon Inventory</string>
    <string name="pokemon_name_hint">Pokemon Name</string>
    <string name="pokemon_place_hint">Pokemon Place Name</string>
    <string name="add_pokemon">Add Pokemon</string>
    <string name="transfer_pokemon">Transfer Pokemon</string>
    <string name="find_pokemon">Find Pokemon</string>
    <string name="na">N/A</string>
</resources>
